# apiFormacionAcademica/models/nivel_formacion.go
@@ -10,9 +10,8 @@ import (
 )
 
 type NivelFormacion struct {
-	Id          int       `orm:"column(id);pk"`
-	NombreNivel string    `orm:"column(nombre_nivel);null"`
-	ProgramaId  *Programa `orm:"column(programa_id);rel(fk)"`
+	Id          int    `orm:"column(id);pk"`
+	NombreNivel string `orm:"column(nombre_nivel);null"`
 }
 
 func (t *NivelFormacion) TableName() string {
